--- a/index.html
+++ b/index.html
@@ -8,10 +8,29 @@
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"> -->
 </head>
 <body>
-    <div class="container">
-        <h1>Neo Boostrap</h1>
-        <p>I'm Vu Ba Thang</p>
-        <p>I'm learning Bootstrap Core and System Design of Boostrap</p>
-    </div>
+    <header>
+        <div class="container">
+            <h1>Neo Boostrap</h1>
+            <p>I'm Vu Ba Thang</p>
+            <p>I'm learning Bootstrap Core and System Design of Boostrap</p>
+        </div>
+    </header>
+
+    <section>
+        <div class="container">
+            <div class="row row-cols-2">
+                <div class="col">
+                    <h2>Column 1</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem, accusamus totam suscipit natus deleniti doloremque delectus quo rem corporis, molestiae ipsum, recusandae repellendus. Beatae ullam sit non similique quibusdam fugiat.</p>
+                </div>
+                
+                <div class="col">
+                    <h2>Column 2</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem, accusamus totam suscipit natus deleniti doloremque delectus quo rem corporis, molestiae ipsum, recusandae repellendus. Beatae ullam sit non similique quibusdam fugiat.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
